section our works

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	</section>
 	<section class="about">
 		<div class="container">
-			<h2>О компании</h2>
+			<h2 class="about__title">О компании</h2>
 			<p>Благодаря талантливым мастерам и ответственному подходу к работе, компания «ГидроТехМонтаж» может предложить своим клиентам комплексный подход в решении любых задач в области водоснабжения, водоочистки и канализации</p>
 			<p>Компания ООО «ГидроТехМонтаж» специализируется на производстве, проектирование, и монтаже систем отопления, водоснабжения, водоочистки, канализации, а также предоставляет услуги по продаже специализированного оборудования, подходящего для решения определенных задач, проектированию, строительству и монтажу открытых бассейнов и искусственных водоемов. </p>
 			<ul class="about__list">
@@ -97,6 +97,88 @@
 				<li class="about_item">Индивидуальный подход к каждому клиенту</li>
 			</ul>
 			<a class="about_buton">Подробнее</a>
+		</div>
+	</section>
+	<section class="features">
+		<div class="container">
+			<h2 class="features__title">Наши преимущества</h2>
+			<div class="row">
+				<div class="feature__item feature__item--professional col-md-4"> 
+					<div class="feature__title">Надежность и профессионализм</div>
+					<p class="feature_text">Мы заинтересованы в том, чтобы помочь каждому из Вас, и знаем, как сделать свою работу наилучшим образом </p>
+				</div>
+				<div class="feature__item feature__item--certificate col-md-4"> 
+					<div class="feature__title">Лицензирование и сертификация</div>
+					<p class="feature_text">Наша компания обладает всеми необходимыми лицензиями и сертификатами для предоставления услуг</p>
+				</div>
+				<div class="feature__item feature__item--registration col-md-4"> 
+					<div class="feature__title">Официальное оформление</div>
+					<p class="feature_text">Офицальное оформление отношений с  заказчиком посредством залючения договора</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="feature__item feature__item--garanty col-md-4"> 
+					<div class="feature__title">Гарантия качества</div>
+					<p class="feature_text">Гарантия качества на все виды услуг и предлагаемое оборудование</p>
+				</div>
+				<div class="feature__item feature__item--service col-md-4"> 
+					<div class="feature__title">Сервис - центр</div>
+					<p class="feature_text">Собственный сервис - центр гарантийного и постгарантийного обслуживания</p>
+				</div>
+				<div class="feature__item feature__item--price col-md-4"> 
+					<div class="feature__title">Низкие цены и широкий ассортимент</div>
+					<p class="feature_text">Мы тщательно следим за обновлением ассортимента и предлагаем своим покупателям только самое лучшее</p>
+				</div>
+			</div>	
+		</div>
+	</section>
+	<section class="works"> 
+		<div class="container"> 
+			<h2 class="works__title">Наши работы</h2>
+			<p class="works__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
+			<div class="row"> 
+				<div class="works__list col-md-9">	
+					<div class="row"> 
+						<div class="work col-md-4"> 
+							<a href="#" class="work__link"> 
+								<img class="work__image" src="images/our_work1.jpg">
+							</a>
+						</div>
+						<div class="work col-md-4"> 
+							<a href="#" class="work__link"> 
+								<img class="work__image" src="images/our_work2.jpg">
+							</a>
+						</div>
+						<div class="work col-md-4"> 
+							<a href="#" class="work__link"> 
+								<img class="work__image" src="images/our_work3.jpg">
+							</a>
+						</div>
+					</div>
+					<div class="row"> 
+						<div class="work col-md-4"> 
+							<a href="#" class="work__link"> 
+								<img class="work__image" src="images/our_work4.jpg">
+							</a>
+						</div>
+						<div class="work col-md-4"> 
+							<a href="#" class="work__link"> 
+								<img class="work__image" src="images/our_work5.jpg">
+							</a>
+						</div>
+						<div class="work col-md-4"> 
+							<a href="#" class="work__link"> 
+								<img class="work__image" src="images/our_work6.jpg">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="offers col-md-3"> 
+					<div class="offers__title">We tried to make it as versatile as possible</div>
+					<p class="offers__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+					<a class="offers__link">Посмотреть все</a>
+				</div>
+			</div>
 		</div>
 	</section>
 </body>
