--- a/index.html
+++ b/index.html
@@ -181,5 +181,40 @@
 			</div>
 		</div>
 	</section>
+	<section class="reviews">
+		<div class="container"> 
+			<div class="review"> 
+				<div class="review__text"> 
+					But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system
+				</div>
+				<div class="review__author"> 
+					Григорий Чхартишвили
+				</div>
+				<a class="review__link">Читать все отзывы</a>
+			</div>
+			<div class="reviews__dots"> 
+				<a href="#" class="reviews__dot">&#149;</a>
+				<a href="#" class="reviews__dot">&#149;</a>
+				<a href="#" class="reviews__dot">&#149;</a>
+			</div>
+		</div>
+	</section>
+	<section class="communication"> 
+		<div class="map"> 
+			<div class="position"> 
+				<div class="position__logo">ГидроТехМонтаж</div>
+				<p class="position__adress">ул. Дачная, 35 a / 52<br>Нижний Новгород, 603041</p>
+				<a class="position__phone" href="tel:89870075623">8 (987) 007 56 23</a>
+				<a class="position__email" href="mailto:neo.nature@mail.ru">neo.nature@mail.ru</a>
+				
+			</div>
+		</div>
+		<div class="write"> 
+			<h2 class="write__title">Напишите нам</h2>
+			<form class=""write-form" action=""> 
+			<input type="text" placeholder="Ваше Имя">
+			</form>
+		</div>
+	</section>
 </body>
 </html>
