make header-bottom

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<ul class="header-bottom__list">
 					<li class="header-bottom__item">
 						<a href="#">
-							<img src="images/heating.png" alt="" class="header-bottom__img">
+							<span class="header-bottom__img header-bottom__img--heating"></span>
 							<p class="header-bottom__name">Отопление</p>
 						</a>
 						<ul class="submenu">
@@ -47,37 +47,37 @@
 					</li>
 					<li class="header-bottom__item">
 						<a href="#">
-							<img src="images/water-service.png" alt="" class="header-bottom__img">
+							<span class="header-bottom__img header-bottom__img--service"></span>
 							<p class="header-bottom__name">Водоснабжение</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
 						<a href="#">
-							<img src="images/pool.png" alt="" class="header-bottom__img">
+							<span class="header-bottom__img header-bottom__img--pool"></span>
 							<p class="header-bottom__name">Бассейны и искусственные пруды</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
 						<a href="#">
-							<img src="images/canalization.png" alt="" class="header-bottom__img">
+							<span class="header-bottom__img header-bottom__img--canalization"></span>
 							<p class="header-bottom__name">Канализация</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
 						<a href="#">
-							<img src="images/analiz.png" alt="" class="header-bottom__img">
+							<span class="header-bottom__img header-bottom__img--analiz"></span>
 							<p class="header-bottom__name">Анализ воды и рекомендации специалиста</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
 						<a href="#">
-							<img src="images/clean_water.png" alt="" class="header-bottom__img">
+							<span class="header-bottom__img header-bottom__img--clean_water"></span>
 							<p class="header-bottom__name">Водоочистка</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
 						<a href="#">
-							<img src="images/own_making.png" alt="" class="header-bottom__img">
+							<span class="header-bottom__img header-bottom__img--own_making"></span>
 							<p class="header-bottom__name">Собственное производство</p>
 						</a>
 					</li>
