--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<li class="header-bottom__item">
 						<a href="#">
 							<span class="header-bottom__img header-bottom__img--pool"></span>
-							<p class="header-bottom__name">Бассейны и искусственные пруды</p>
+							<p class="header-bottom__name">Бассейны и<br> искусственные пруды</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
@@ -66,7 +66,7 @@
 					<li class="header-bottom__item">
 						<a href="#">
 							<span class="header-bottom__img header-bottom__img--analiz"></span>
-							<p class="header-bottom__name">Анализ воды и рекомендации специалиста</p>
+							<p class="header-bottom__name">Анализ воды и<br> рекомендации специалиста</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
@@ -78,7 +78,7 @@
 					<li class="header-bottom__item">
 						<a href="#">
 							<span class="header-bottom__img header-bottom__img--own_making"></span>
-							<p class="header-bottom__name">Собственное производство</p>
+							<p class="header-bottom__name">Собственное <br>производство</p>
 						</a>
 					</li>
 				</ul>
