Style module About

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="container">
 				<ul class="header-bottom__list">
 					<li class="header-bottom__item">
-						<a href="#">
+						<a class="header-bottom__link" href="#">
 							<span class="header-bottom__img header-bottom__img--heating"></span>
 							<p class="header-bottom__name">Отопление</p>
 						</a>
@@ -46,37 +46,37 @@
 						</ul>
 					</li>
 					<li class="header-bottom__item">
-						<a href="#">
+						<a class="header-bottom__link" href="#">
 							<span class="header-bottom__img header-bottom__img--service"></span>
 							<p class="header-bottom__name">Водоснабжение</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
-						<a href="#">
+						<a class="header-bottom__link" href="#">
 							<span class="header-bottom__img header-bottom__img--pool"></span>
 							<p class="header-bottom__name">Бассейны и<br> искусственные пруды</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
-						<a href="#">
+						<a class="header-bottom__link" href="#">
 							<span class="header-bottom__img header-bottom__img--canalization"></span>
 							<p class="header-bottom__name">Канализация</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
-						<a href="#">
+						<a class="header-bottom__link" href="#">
 							<span class="header-bottom__img header-bottom__img--analiz"></span>
 							<p class="header-bottom__name">Анализ воды и<br> рекомендации специалиста</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
-						<a href="#">
+						<a class="header-bottom__link" href="#">
 							<span class="header-bottom__img header-bottom__img--clean_water"></span>
 							<p class="header-bottom__name">Водоочистка</p>
 						</a>
 					</li>
 					<li class="header-bottom__item">
-						<a href="#">
+						<a class="header-bottom__link" href="#">
 							<span class="header-bottom__img header-bottom__img--own_making"></span>
 							<p class="header-bottom__name">Собственное <br>производство</p>
 						</a>
@@ -89,7 +89,7 @@
 	</section>
 	<section class="about">
 		<div class="container">
-			<h2 class="about__title">О компании</h2>
+			<h2 class="title-section title-section--left">О компании</h2>
 			<p>Благодаря талантливым мастерам и ответственному подходу к работе, компания «ГидроТехМонтаж» может предложить своим клиентам комплексный подход в решении любых задач в области водоснабжения, водоочистки и канализации</p>
 			<p>Компания ООО «ГидроТехМонтаж» специализируется на производстве, проектирование, и монтаже систем отопления, водоснабжения, водоочистки, канализации, а также предоставляет услуги по продаже специализированного оборудования, подходящего для решения определенных задач, проектированию, строительству и монтажу открытых бассейнов и искусственных водоемов. </p>
 			<ul class="about__list">
@@ -102,7 +102,7 @@
 	</section>
 	<section class="features">
 		<div class="container">
-			<h2 class="features__title">Наши преимущества</h2>
+			<h2 class="title-section title-section--center">Наши преимущества</h2>
 			<div class="row">
 				<div class="feature__item feature__item--professional col-md-4"> 
 					<div class="feature__title">Надежность и профессионализм</div>
@@ -135,7 +135,7 @@
 	</section>
 	<section class="works"> 
 		<div class="container"> 
-			<h2 class="works__title">Наши работы</h2>
+			<h2 class="title-section title-section--center">Наши работы</h2>
 			<p class="works__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
 			<div class="row"> 
 				<div class="works__list col-md-9">	
