module about button

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 	<section class="about">
 		<div class="container">
 			<h2 class="title-section title-section--left">О компании</h2>
-			<p>Благодаря талантливым мастерам и ответственному подходу к работе, компания «ГидроТехМонтаж» может предложить своим клиентам комплексный подход в решении любых задач в области водоснабжения, водоочистки и канализации</p>
+			<p class="about__resume">Благодаря талантливым мастерам и ответственному подходу к работе, компания «ГидроТехМонтаж» может предложить своим клиентам комплексный подход в решении любых задач в области водоснабжения, водоочистки и канализации</p>
 			<p>Компания ООО «ГидроТехМонтаж» специализируется на производстве, проектирование, и монтаже систем отопления, водоснабжения, водоочистки, канализации, а также предоставляет услуги по продаже специализированного оборудования, подходящего для решения определенных задач, проектированию, строительству и монтажу открытых бассейнов и искусственных водоемов. </p>
 			<ul class="about__list">
-				<li class="about_item">Безукоризненное качество обслуживания</li>
-				<li class="about_item">Соблюдение согласованных сроков работы</li>
-				<li class="about_item">Индивидуальный подход к каждому клиенту</li>
+				<li class="about__item">Безукоризненное качество обслуживания</li>
+				<li class="about__item">Соблюдение согласованных сроков работы</li>
+				<li class="about__item">Индивидуальный подход к каждому клиенту</li>
 			</ul>
 			<a class="about_buton">Подробнее</a>
 		</div>
