Module advantage was styling

--- a/index.html
+++ b/index.html
@@ -97,38 +97,38 @@
 				<li class="about__item">Соблюдение согласованных сроков работы</li>
 				<li class="about__item">Индивидуальный подход к каждому клиенту</li>
 			</ul>
-			<a class="about_buton">Подробнее</a>
+			<a class="button" href="href">Подробнее</a>
 		</div>
 	</section>
-	<section class="features">
+	<section class="advantages">
 		<div class="container">
 			<h2 class="title-section title-section--center">Наши преимущества</h2>
 			<div class="row">
-				<div class="feature__item feature__item--professional col-md-4"> 
-					<div class="feature__title">Надежность и профессионализм</div>
-					<p class="feature_text">Мы заинтересованы в том, чтобы помочь каждому из Вас, и знаем, как сделать свою работу наилучшим образом </p>
+				<div class="advantage__item advantage__item--professional col-md-4"> 
+					<div class="advantage__title">Надежность и профессионализм</div>
+					<p class="advantage_text">Мы заинтересованы в том, чтобы помочь каждому из Вас, и знаем, как сделать свою работу наилучшим образом </p>
 				</div>
-				<div class="feature__item feature__item--certificate col-md-4"> 
-					<div class="feature__title">Лицензирование и сертификация</div>
-					<p class="feature_text">Наша компания обладает всеми необходимыми лицензиями и сертификатами для предоставления услуг</p>
+				<div class="advantage__item advantage__item--certificate col-md-4"> 
+					<div class="advantage__title">Лицензирование и сертификация</div>
+					<p class="advantage_text">Наша компания обладает всеми необходимыми лицензиями и сертификатами для предоставления услуг</p>
 				</div>
-				<div class="feature__item feature__item--registration col-md-4"> 
-					<div class="feature__title">Официальное оформление</div>
-					<p class="feature_text">Офицальное оформление отношений с  заказчиком посредством залючения договора</p>
+				<div class="advantage__item advantage__item--registration col-md-4"> 
+					<div class="advantage__title">Официальное оформление</div>
+					<p class="advantage_text">Офицальное оформление отношений с  заказчиком посредством залючения договора</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="feature__item feature__item--garanty col-md-4"> 
-					<div class="feature__title">Гарантия качества</div>
-					<p class="feature_text">Гарантия качества на все виды услуг и предлагаемое оборудование</p>
+				<div class="advantage__item advantage__item--garanty col-md-4"> 
+					<div class="advantage__title">Гарантия качества</div>
+					<p class="advantage_text">Гарантия качества на все виды услуг и предлагаемое оборудование</p>
 				</div>
-				<div class="feature__item feature__item--service col-md-4"> 
-					<div class="feature__title">Сервис - центр</div>
-					<p class="feature_text">Собственный сервис - центр гарантийного и постгарантийного обслуживания</p>
+				<div class="advantage__item advantage__item--service col-md-4"> 
+					<div class="advantage__title">Сервис - центр</div>
+					<p class="advantage_text">Собственный сервис - центр гарантийного и постгарантийного обслуживания</p>
 				</div>
-				<div class="feature__item feature__item--price col-md-4"> 
-					<div class="feature__title">Низкие цены и широкий ассортимент</div>
-					<p class="feature_text">Мы тщательно следим за обновлением ассортимента и предлагаем своим покупателям только самое лучшее</p>
+				<div class="advantage__item advantage__item--price col-md-4"> 
+					<div class="advantage__title">Низкие цены и широкий ассортимент</div>
+					<p class="advantage_text">Мы тщательно следим за обновлением ассортимента и предлагаем своим покупателям только самое лучшее</p>
 				</div>
 			</div>	
 		</div>
