--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		<div class="container"> 
 			<h2 class="title-section title-section--center">Наши работы</h2>
 			<p class="works__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</p>
-			<div class="row"> 
+			<div class="row works__items"> 
 				<div class="works__list col-md-9">	
 					<div class="row"> 
 						<div class="work col-md-4"> 
