--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>компания «ГидроТехМонтаж»</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap_grid.min.css">
+	<link rel="stylesheet" type="text/css" href="css/slick.css">
+	<link rel="stylesheet" type="text/css" href="css/slick-theme.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -174,29 +176,46 @@
 						</div>
 					</div>
 				</div>
-				<div class="offers col-md-3"> 
-					<div class="offers__title">We tried to make it as versatile as possible</div>
-					<p class="offers__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
-					<a class="offers__link">Посмотреть все</a>
+				<div class="col-md-3 offers-wrap"> 
+					<div class="offers">
+						<div class="offers__title">We tried to make it as versatile as possible</div>
+						<p class="offers__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem</p>
+						<a href="#" class="offers__link">Посмотреть все</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<section class="reviews">
 		<div class="container"> 
-			<div class="review"> 
-				<div class="review__text"> 
-					But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system
+			<div class="reviews__slider">
+				<div class="review"> 
+					<div class="review__text"> 
+						But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system
+					</div>
+					<div class="review__author"> 
+						Григорий Чхартишвили
+					</div>
+					<a class="review__link">Читать все отзывы</a>
 				</div>
-				<div class="review__author"> 
-					Григорий Чхартишвили
+				<div class="review"> 
+					<div class="review__text"> 
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio quis libero tempore! Odit quam eaque facilis, vero, et quo accusantium provident, similique quod quae earum dignissimos labore ut facere pariatur.
+					</div>
+					<div class="review__author"> 
+						Петр Петров
+					</div>
+					<a class="review__link">Читать все отзывы</a>
 				</div>
-				<a class="review__link">Читать все отзывы</a>
-			</div>
-			<div class="reviews__dots"> 
-				<a href="#" class="reviews__dot">&#149;</a>
-				<a href="#" class="reviews__dot">&#149;</a>
-				<a href="#" class="reviews__dot">&#149;</a>
+				<div class="review"> 
+					<div class="review__text"> 
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis dolores excepturi maxime, quaerat quia modi. Atque magni laborum ratione optio itaque earum enim odit numquam, cupiditate, quia, voluptatum dolore dignissimos.
+					</div>
+					<div class="review__author"> 
+						Иван Иванов
+					</div>
+					<a class="review__link">Читать все отзывы</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -264,5 +283,8 @@
 			</div>
 		</div>
 	</footer>
+	<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+	<script src="js/slick.min.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
