delete space left side

--- a/index.html
+++ b/index.html
@@ -10,29 +10,31 @@
 </head>
 <body>
 	<header class="page-header">
-			<div class="row header-top">
+			<div class="header-top">
 				<div class="container">
-				<div class="header-top__logo col-md-3">ГидроТехМонтаж</div>
-				<div class="header-top__nav col-md-7"> 
-					<ul class="header-top__list">
-						<li class="header-top__item header-top__item--home header-top__item--active"><a href="index.html"><img src="images/home.png"></a></li>
-						<li class="header-top__item"><a href="#">О КОМПАНИИ</a></li>
-						<li class="header-top__item"><a href="#">НАШИ РАБОТЫ</a></li>
-						<li class="header-top__item"><a href="#">ОТЗЫВЫ</a></li>
-						<li class="header-top__item"><a href="#">FAQ</a></li>
-						<li class="header-top__item"><a href="#">КОНТАКТЫ</a></li>
-					</ul>
-				</div>
-				<div class="callback col-md-2">
-					<div class="callback__img"></div>
-					<div class="callback__data">
-						<p class="callback__phone">8 (987) 007 56 23</p>
-						<a href="" class="callback__link">ЗАКАЗАТЬ ЗВОНОК</a>
+				<div class="row">
+					<div class="header-top__logo col-md-3">ГидроТехМонтаж</div>
+					<div class="header-top__nav col-md-7"> 
+						<ul class="header-top__list">
+							<li class="header-top__item header-top__item--home header-top__item--active"><a href="index.html"><img src="images/home.png"></a></li>
+							<li class="header-top__item"><a href="#">О КОМПАНИИ</a></li>
+							<li class="header-top__item"><a href="#">НАШИ РАБОТЫ</a></li>
+							<li class="header-top__item"><a href="#">ОТЗЫВЫ</a></li>
+							<li class="header-top__item"><a href="#">FAQ</a></li>
+							<li class="header-top__item"><a href="#">КОНТАКТЫ</a></li>
+						</ul>
+					</div>
+					<div class="callback col-md-2">
+						<div class="callback__img"></div>
+						<div class="callback__data">
+							<p class="callback__phone">8 (987) 007 56 23</p>
+							<a href="" class="callback__link">ЗАКАЗАТЬ ЗВОНОК</a>
+						</div>
 					</div>
 				</div>
 				</div>
 			</div>
-			<div class="row header-bottom">
+			<div class="header-bottom">
 				<div class="container">
 				<ul class="header-bottom__list">
 					<li class="header-bottom__item">
@@ -84,6 +86,7 @@
 						</a>
 					</li>
 				</ul>
+			</div>
 			</div>
 	</header>
 	<section class="banner">
