fix block offers

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<div class="col-md-3 offers-wrap"> 
 					<div class="offers">
 						<div class="offers__title">We tried to make it as versatile as possible</div>
-						<p class="offers__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem</p>
+						<p class="offers__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
 						<a href="#" class="offers__link">Посмотреть все</a>
 					</div>
 				</div>
