Module communication start

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="communication"> 
+	<section class="communication container"> 
 		<div class="map"> 
 			<div class="position"> 
 				<div class="position__logo">ГидроТехМонтаж</div>
