Module communication wwas added

--- a/index.html
+++ b/index.html
@@ -222,25 +222,29 @@
 			</div>
 		</div>
 	</section>
-	<section class="communication container"> 
-		<div class="map"> 
-			<div class="position"> 
-				<div class="position__logo">ГидроТехМонтаж</div>
-				<p class="position__adress">ул. Дачная, 35 a / 52<br>Нижний Новгород, 603041</p>
-				<a class="position__phone" href="tel:89870075623">8 (987) 007 56 23</a>
-				<a class="position__email" href="mailto:neo.nature@mail.ru">neo.nature@mail.ru</a>
-				
+	<section class="communication clearfix"> 
+		<div class="container">
+			<div class="row">
+				<div class="map col-md-6"> 
+					<div class="position"> 
+						<div class="position__logo">ГидроТехМонтаж</div>
+						<p class="position__adress">ул. Дачная, 35 a / 52<br>Нижний Новгород, 603041</p>
+						<a class="position__phone" href="tel:89870075623">8 (987) 007 56 23</a>
+						<a class="position__email" href="mailto:neo.nature@mail.ru">neo.nature@mail.ru</a>
+						
+					</div>
+				</div>
+				<div class="write col-md-6"> 
+					<h2 class="write__title">Напишите нам</h2>
+					<form class="write-form" action="" method="POST"> 
+					<input class="write-input write-input--active" type="text" name="name" placeholder="Ваше Имя">
+					<input class="write-input" type="tel" name="phone" placeholder="Ваш Телефон">
+					<input class="write-input" type="email" name="email" placeholder="Ваш E-mail">
+					<textarea class="write-textarea" name="message" placeholder="Введите сообщение"></textarea>
+					<input class="write-submit button" type="submit" name="submit" value="Отправить">
+					</form>
+				</div>
 			</div>
-		</div>
-		<div class="write"> 
-			<h2 class="write__title">Напишите нам</h2>
-			<form class="write-form" action="" method="POST"> 
-			<input class="write-input write-input--active" type="text" name="name" placeholder="Ваше Имя">
-			<input class="write-input" type="tel" name="phone" placeholder="Ваш Телефон">
-			<input class="write-input" type="email" name="email" placeholder="Ваш E-mail">
-			<textarea class="write-textarea" name="message" placeholder="Введите сообщение"></textarea>
-			<input class="write-submit" type="submit" name="submit" value="Отправить">
-			</form>
 		</div>
 	</section>
 	<footer class="footer-page"> 
