--- a/index.html
+++ b/index.html
@@ -251,24 +251,24 @@
 		<div class="container"> 
 			<div class="info col-md-2">
 				<h3>Информация</h3>
-				<ul class="info__list">
-					<li class="info__item"><a href="#">О КОМПАНИИ</a></li>
-					<li class="info__item"><a href="#">НАШИ РАБОТЫ</a></li>
-					<li class="info__item"><a href="#">ОТЗЫВЫ</a></li>
-					<li class="info__item"><a href="#">FAQ</a></li>
-					<li class="info__item"><a href="#">КОНТАКТЫ</a></li>
+				<ul class="footer__list">
+					<li class="footer__item"><a href="#">О КОМПАНИИ</a></li>
+					<li class="footer__item"><a href="#">НАШИ РАБОТЫ</a></li>
+					<li class="footer__item"><a href="#">ОТЗЫВЫ</a></li>
+					<li class="footer__item"><a href="#">FAQ</a></li>
+					<li class="footer__item"><a href="#">КОНТАКТЫ</a></li>
 				</ul>
 			</div>
 			<div class="service col-md-4">
 				<h3>услугИ</h3>
-				<ul class="service__list">
-					<li class="service__item"><a href="#">Отопление</a></li>
-					<li class="service__item"><a href="#">Водоснабжение</a></li>
-					<li class="service__item"><a href="#">Бассейны и искуссвтенные пруды</a></li>
-					<li class="service__item"><a href="#">Канализация</a></li>
-					<li class="service__item"><a href="#">Анализ воды и рекомендации специалиста</a></li>
-					<li class="service__item"><a href="#">Водоочистка</a></li>
-					<li class="service__item"><a href="#">Собственное производство</a></li>
+				<ul class="footer__list">
+					<li class="footer__item"><a href="#">Отопление</a></li>
+					<li class="footer__item"><a href="#">Водоснабжение</a></li>
+					<li class="footer__item"><a href="#">Бассейны и искуссвтенные пруды</a></li>
+					<li class="footer__item"><a href="#">Канализация</a></li>
+					<li class="footer__item"><a href="#">Анализ воды и рекомендации специалиста</a></li>
+					<li class="footer__item"><a href="#">Водоочистка</a></li>
+					<li class="footer__item"><a href="#">Собственное производство</a></li>
 				</ul>
 			</div>
 			<div class="contacts col-md-3">
