--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
 			<div class="info col-md-2">
 				<h3>Информация</h3>
 				<ul class="footer__list">
-					<li class="footer__item"><a href="#">О КОМПАНИИ</a></li>
-					<li class="footer__item"><a href="#">НАШИ РАБОТЫ</a></li>
-					<li class="footer__item"><a href="#">ОТЗЫВЫ</a></li>
+					<li class="footer__item"><a href="#">О компании</a></li>
+					<li class="footer__item"><a href="#">Наши работы</a></li>
+					<li class="footer__item"><a href="#">Отзывы</a></li>
 					<li class="footer__item"><a href="#">FAQ</a></li>
-					<li class="footer__item"><a href="#">КОНТАКТЫ</a></li>
+					<li class="footer__item"><a href="#">Контакты</a></li>
 				</ul>
 			</div>
 			<div class="service col-md-4">
@@ -277,8 +277,8 @@
 				<p class="contacts__phone">8 (987) 007 56 23</p>
 				<p class="contacts__email">neo.nature@mail.ru</p>
 				<div class="contacts__social"> 
-					<a href="#" class="contacts__link contacts__link--vk"></a>
-					<a href="#" class="contacts__link contacts__link--fasebook"></a> 
+					<a href="http://vk.com" class="contacts__link contacts__link--vk"></a>
+					<a href="http://facebook.com" class="contacts__link contacts__link--fasebook"></a> 
 				</div>
 			</div>
 			<div class="search col-md-3">
