--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@
 			</div>
 			<div class="contacts col-md-3">
 				<h3>контакты</h3>
-				<p class="contacts__street">ул. Дачная, 35 а / 52<br>г. Нижний Новгород, 603041</p>
+				<p class="contacts__street">ул. Дачная, 35 а / 52</p>
+				<p class="contacts__street">г. Нижний Новгород, 603041</p>
 				<p class="contacts__phone">8 (987) 007 56 23</p>
 				<p class="contacts__email">neo.nature@mail.ru</p>
 				<div class="contacts__social"> 
@@ -283,7 +284,7 @@
 			</div>
 			<div class="search col-md-3">
 				<h3>пОИСК</h3>
-				<form class="search__form"> 
+				<form action="#" method="GET" class="search__form"> 
 					<input class="search__input" type="text" name="search"><span class="seach_icon"></span>
 				</form>
 				<p class="search__copyright">© Все права защищены. 2015</p>
