--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
 						<div class="position__logo">ГидроТехМонтаж</div>
 						<p class="position__adress">ул. Дачная, 35 a / 52<br>Нижний Новгород, 603041</p>
 						<a class="position__phone" href="tel:89870075623">8 (987) 007 56 23</a>
-						<a class="position__email" href="mailto:neo.nature@mail.ru">neo.nature@mail.ru</a>
-						
+						<a class="position__email" href="mailto:neo.nature@mail.ru">neo.nature@mail.ru</a>						
 					</div>
+					<div class="position__triangle"></div>
 				</div>
 				<div class="write col-md-6"> 
 					<h2 class="write__title">Напишите нам</h2>
